# exercises

./: README.md
bit-manipulation/permission-system/: Cargo.toml
blockchain-systems/pubkey-compression/: README.md
blockchain-systems/token-serialization/: Cargo.toml
blockchain/pda-tracking/: Cargo.toml
rust/binary_operation/: Cargo.toml
rust/compact_sensor_network/: README.md
rust/sandbox/: Cargo.toml  README.md
rust/submarine_u8/: Cargo.toml  README.md
sandbox/dustbox/: Cargo.toml
week_24/: Cargo.toml
week_24/src/: main.rs
week_25/: Cargo.toml
week_26/src/: main.rs
week_27/: Cargo.toml
week_27/benches/: alloc_bench.rs
week_27/src/: lib.rs
week_27/src/day_1/: notes.md
week_27/src/day_1/ex2_mem_list/: main.rs
week_27/src/day_2/ex1_mem/: main.rs
week_27/src/day_2/ex2_padding/: main.rs
week_27/src/day_4/: ex3_type_audit.md  mod.rs
week_27/src/day_5/: mod.rs
week_27/src/day_5/ex2_audit_log/: audit_log.md  main.rs
week_27/src/day_6/: ex1_packed_string.rs  ex2_event_payload.rs
week_28/: Cargo.toml
week_28/benches/: day2_aos_soa.rs  day3_cache.rs  day4_false_sharing.rs
week_28/src/: lib.rs
week_28/src/day_1/: ex2_ffi_sim.rs
week_28/src/day_1/ex1_libc_mem/: main.rs
week_28/src/day_3/ex1_cache_line/: main.rs
week_28/src/day_5/: ex1_synthese.rs
week_29/: Cargo.toml
week_29/day_6/: Cargo.toml
week_30/: Cargo.toml
week_30/day_2/: Cargo.toml
week_30/day_4/: Cargo.toml
week_30/day_5/: Cargo.toml
week_30/day_6/: Cargo.toml
week_31/: Cargo.toml
week_31/day_1/: Cargo.toml
week_31/day_1/ex1_refcell/: main.rs
week_31/day_1/ex2_mutex/: main.rs
week_31/day_1/ex3_unsafe/: main.rs
week_31/day_1/ex4_raw/: main.rs
week_31/day_1/ex5_raw/: main.rs
week_31/day_1/ex6_raw/: main.rs
week_31/day_1/ex7_raw/: main.rs
week_34/: Cargo.toml
week_35/: Cargo.toml
weekly/week_26/: Cargo.toml
weekly/week_26/src/: main.rs
weekly/week_26/src/day_1/: ex1_group_by_fold.rs  ex2_group_by_fold_generic.rs  ex4_group_by_fold_generic2.rs  ex5_lifecycle.rs  mod.rs
weekly/week_26/src/day_2/: ex1_scan.rs
weekly/week_26/src/day_2/log_parser/: analyzer.rs  domain.rs  main.rs  parser.rs
weekly/week_26/src/day_3/: ex1_benchmark.rs  mod.rs
weekly/week_26/src/day_3/ex1_benchmark/: main.rs
weekly/week_26/src/day_4/ex1_log_parser/: analyzer.rs  cli.rs  domain.rs  error.rs  main.rs
weekly/week_26/src/day_5/: ex1_market_flow.rs  mod.rs
weekly/week_26/src/day_6/: ex1_slide_n_fold.rs
weekly/week_27/: Cargo.toml
weekly/week_27/benches/: alloc_bench.rs
weekly/week_27/src/: lib.rs
weekly/week_27/src/day_1/: mod.rs
weekly/week_27/src/day_2/: ex5_packed_string.rs  ex_3_revisions_fold.rs  mod.rs
weekly/week_27/src/day_2/ex4_align_to/: main.rs
weekly/week_27/src/day_3/: ex1_mem.rs  mod.rs
weekly/week_27/src/day_4/: ex1_transparent.rs
weekly/week_27/src/day_4/ex2_box_option/: main.rs
weekly/week_27/src/day_5/: ex1_niche_filled_pointers.rs
weekly/week_27/src/day_6/: mod.rs
weekly/week_27/src/day_7/: mem_cheat_sheet.md
weekly/week_28/: Cargo.toml  build.rs
weekly/week_28/benches/: day2_aos_soa.rs  day3_cache.rs
weekly/week_28/src/: main.rs
weekly/week_28/src/day_1/: ex2_ffi_sim.rs  mod.rs
weekly/week_28/src/day_1/ex1_libc_mem/: main.rs
weekly/week_28/src/day_1/ex3_ffi_add/: main.rs
weekly/week_28/src/day_2/: mod.rs
weekly/week_28/src/day_5/: mod.rs
weekly/week_30/day_1/: Cargo.toml
weekly/week_30/day_1/ex1_mut/: main.rs
weekly/week_30/day_1/ex2_mut/: main.rs
weekly/week_30/day_1/ex3_refcell/: main.rs
weekly/week_30/day_1/ex4_bench/: main.rs
weekly/week_30/day_1/ex5_mem/: main.rs
weekly/week_30/day_1/ex6_parsing/: main.rs
(+199 files in other folders)
