[package]
name = "week_27"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.6.0"
log = "0.4.27"




[[bench]]
name = "alloc_bench"
harness = false

[[bin]]
name = "ex2_mem_list"
path = "src/day_1/ex2_mem_list/main.rs"

[[bin]]
name = "ex1_mem"
path = "src/day_2/ex1_mem/main.rs"

[[bin]]
name = "ex2_padding"
path = "src/day_2/ex2_padding/main.rs"

[[bin]]
name = "ex4_align_to"
path = "src/day_2/ex4_align_to/main.rs"

[[bin]]
name = "ex2_box_option"
path = "src/day_4/ex2_box_option/main.rs"

[[bin]]
name = "ex2_audit_log"
path = "src/day_5/ex2_audit_log/main.rs"