[package]
name = "week_26"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = {version =  "4.5.40", features = ["derive"]}
thiserror = "2.0.12"



[[bin]]
name = "week_26"
path = "src/main.rs"

[[bin]]
name = "log_parser"
path = "src/day_2/log_parser/main.rs"

[[bin]]
name = "ex1_benchmark"
path = "src/day_3/ex1_benchmark/main.rs"

[[bin]]
name = "ex1_log_parser"
path = "src/day_4/ex1_log_parser/main.rs"
