[package]
name = "week_27"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.6.0"




[[bench]]
name = "alloc_bench"
harness = false

[[bin]]
name = "ex2_mem_list"
path = "src/day_1/ex2_mem_list/main.rs"

[[bin]]
name = "ex1_mem"
path = "src/day_2/ex1_mem/main.rs"

[[bin]]
name = "ex2_padding"
path = "src/day_2/ex2_padding/main.rs"