[package]
name = "week_28"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.6.0"
libc = "0.2.174"

[[bench]]
name = "day2_aos_soa"
harness = false

[build-dependencies]
cc = "1.0"

[[bin]]
name = "ex1_libc_mem"
path = "src/day_1/ex1_libc_mem/main.rs"

[[bin]]
name = "ex3_ffi_add"
path = "src/day_1/ex3_ffi_add/main.rs"
